# SQR-UKF-main

./: .gitignore  CMakeLists.txt  README.md  main.c
cholesky_test/: CMakeLists.txt  test_cholupdate.c
gemm_test/: CMakeLists.txt  gemm_tail_fix_guide.md  heisenbug.md  heisenbug_expanded.md  test_benchmark.c  test_common.h  test_gemm.c  test_gemm_execute.c  test_gemm_large.c  test_gemm_small.c  test_gemm_validated.c  test_kernels.c  test_main.c  test_planning.c  test_reference.c  test_referenceBLAS.c
includes/: linalg_simd.h
lup_test/: CmakeLists.txt  test_lup.c
qr_tests/: CMakeLists.txt  test_benchmark.c  test_common.h  test_correctness.c  test_cpqr.c  test_main.c  test_workspace.c
src/: cholupdate.c  cholupdate.h  inv.c  inv.h  lup.c  lup.h  mul.c  sqr_ukf.c  tran.c  tran_pack.c  tran_pack.h  trsm_blocked.c  trsm_blocked.h
src/gemm/: gemm.c  gemm.h  gemm_helper.h  gemm_kernels_avx2.h  gemm_kernels_avx512.h  gemm_simd_ops.h
src/gemm_2/: gemm.h  gemm_kalman.c  gemm_kernels_avx2.h  gemm_large.c  gemm_optimizations.md  gemm_planning.c  gemm_planning.h  gemm_simd_ops.h  gemm_small.c  gemm_small.h  gemm_static.c  gemm_static.h  gemm_symmetric.c  gemm_utils.h  gemm_validation.h  masked_loads_ub_guide.md
src/qr/: QR_blas3.md  blocked_qr_explained.md  future_optimizations.md  qr.c  qr.h  qr_avx2_kernels.h  qr_debug.h  qr_dispatcher_future.c  qr_kernels_avx2.h  qr_unfinished_blas3.c  qr_unfinishedblas3.c  to-do-list.md
test_inv/: CmakeLists.txt  test_inv.c
